--- a/view/sale_order_view.xml
+++ b/view/sale_order_view.xml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <openerp>
-	<data>      
-       <record model="ir.ui.view" id="sale_order_special_condition_view">
-           <field name="name">sale.order.special.condition</field>
+    <data>      
+        <record model="ir.ui.view" id="sale_order_special_condition_view">
+            <field name="name">sale.order.special.condition</field>
             <field name="model">sale.order</field>
             <field name="inherit_id" ref="sale.view_order_form"/>
             <field name="arch" type="xml">
                 <field name="payment_term" position="after">
                     <field name="special_condition_id"/>
                 </field>
+            </field>
+        </record>       
+        <record model="ir.ui.view" id="view_sale_order_attachments">
+            <field name="name">sale.order.attachments</field>
+            <field name="model">sale.order</field>
+            <field name="inherit_id" ref="sale.view_order_form"/>
+            <field name="arch" type="xml">
+                <page string="Other Information" position="after">
+                    <page string="Attachments">
+                        <field name="attachments_ids" widget="many2many_binary" string="Attach a file"/>
+                    </page>
+                </page>
             </field>
         </record>
     </data>
