--- a/view/sale_order_view.xml
+++ b/view/sale_order_view.xml
@@ -26,5 +26,25 @@
                 </page>
             </field>
         </record>
+        <record model="ir.ui.view" id="quotation_tree_with_reference">
+            <field name="name">quotation.tree.with.reference</field>
+            <field name="model">sale.order</field>
+            <field name="inherit_id" ref="sale.view_quotation_tree"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='name']" position="after">
+                    <field name="client_order_ref" />
+                </xpath>
+            </field>
+        </record>
+        <record model="ir.ui.view" id="sale_order_tree_with_reference">
+            <field name="name">sale.order.tree.with.reference</field>
+            <field name="model">sale.order</field>
+            <field name="inherit_id" ref="sale.view_order_tree"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='name']" position="after">
+                    <field name="client_order_ref" />
+                </xpath>
+            </field>
+        </record>
     </data>
 </openerp>
